Fixed overflow in non-edit mode

--- a/src/WebComponents/Attributes/PersistentObjectAttributeReference/persistent-object-attribute-reference.scss
+++ b/src/WebComponents/Attributes/PersistentObjectAttributeReference/persistent-object-attribute-reference.scss
@@ -17,6 +17,8 @@
     }
 
     &:not([editing]) {
+        overflow: hidden;
+        
         a {
             @include layout-horizontal();
             text-decoration: none;
